Add mobile API rate limits
